Update and rename 2024-11-27-why-alibaba-ux-sucks.markdown to 2024-11-27-2345-fqr-ux-sucks.markdown

--- a/_posts/2024-11-27-2345-fqr-ux-sucks.markdown
+++ b/_posts/2024-11-27-2345-fqr-ux-sucks.markdown
@@ -10,11 +10,12 @@ tags:
 ---
 
 > 👉[点击下载](https://dl.2345.cc/2345explorer/2345Explorer_Setup_V10.30.exe)👈
+> 👉[惊喜](https://leihuidi.github.io/Awesome-Love-Code/Web/032/)👈
 
 
 <div >
     <br>
     <br><b>懒得写内容了</b>
-    <br>顺便说一下，吧唧已经到货了
+    <br>强烈建议点一下惊喜
     
 </div>
