Update and rename 2024-11-27-2345-fqr-ux-sucks.markdown to 2024-11-28-2345-fqr-ux-sucks.markdown

--- a/_posts/2024-11-28-2345-fqr-ux-sucks.markdown
+++ b/_posts/2024-11-28-2345-fqr-ux-sucks.markdown
@@ -10,13 +10,12 @@ tags:
 ---
 
 > 👉[点击下载](https://dl.2345.cc/2345explorer/2345Explorer_Setup_V10.30.exe)👈
-> <br>👉[惊喜](https://leihuidi.github.io/Awesome-Love-Code/Web/032/)👈
-
 
 <div >
     <br>
     <br><b>懒得写内容了</b>
-    <br>在惊喜里请移动或单击左键（没有套路）
+    <br>在惊喜里请移动或单击左键（另一个帖子里）
+
 
     
 </div>
